# mailing_service

./: pyproject.toml
config/: settings.py  urls.py
mailing_service/: admin.py  apps.py  models.py  scheduler.py  tasks.py  urls.py  views.py
mailing_service/management/commands/: send_mailing.py
mailing_service/templates/mailing_service/: base.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
users/: backends.py  forms.py  models.py  services.py  urls.py  views.py
users/templates/users/: login.html  register.html
